--- a/css/custom.css
+++ b/css/custom.css
@@ -1,18 +1,8 @@
+/*Body and colors settings*/
+
 html, body{
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
-}
-
-section:nth-child(2){
-    position: relative;
-}
-
-#section-1{
-
-}
-
-.blue h2, .blue div{
-    color: white;
 }
 
 .blue{
@@ -22,6 +12,33 @@ section:nth-child(2){
 .blue-darker{
     background-color: #022630;
 }
+
+.blue h2, .blue div{
+    color: white;
+}
+
+section.blue .background-title{
+    background-color: #022630;
+    
+}
+
+section:not(.blue) .background-title{
+    background-color: #d6d6d6;
+}
+
+section:nth-child(2){
+    position: relative;
+}
+
+#section-1{
+    position: relative;
+}
+
+
+
+
+
+
 
 h2{
     text-align: center;
@@ -55,14 +72,7 @@ h2{
     font-style: italic;
 }
 
-section.blue .background-title{
-    background-color: #022630;
-    
-}
 
-section:not(.blue) .background-title{
-    background-color: #d6d6d6;
-}
 .images>div{
     text-align: center;
     padding: 2em;
@@ -88,10 +98,12 @@ img+p{
     background-color: gray;
 }
 
-#section-1 img{
-    width: auto;
-    height: 20em;
-    position: absolute;
+#section-1>img{
+    /*width: auto;
+    height: 5em;
+    position: absolute;*/
+    /*bottom: 0;
+    right: 0;*/
 }
 
 footer>div:first-child{
@@ -184,8 +196,9 @@ footer img{
 
 /* Large and up */
 @media screen and (min-width: 64em) {
-    
-}
+    #section-1>div:nth-child(3){
+        margin-right: 1em;
+    }
 
 /* Large only */
 @media screen and (min-width: 64em) and (max-width: 74.9375em) {}
