--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,10 @@ html, body{
     overflow-x: hidden;
 }
 
+.gray{
+    background-color: gray;
+}
+
 .blue{
     background-color: #00485E;
 }
@@ -26,19 +30,71 @@ section:not(.blue) .background-title{
     background-color: #d6d6d6;
 }
 
-section:nth-child(2){
-    position: relative;
+footer>div:last-child{
+    background-color: #021619;
+    color: white;
 }
 
-#section-1{
-    position: relative;
+.background-title{
+    /*visibility: hidden;*/
+    height: 4em;
+    width: 100%;
+    position: absolute;
+
+}
+/*---------------------------------------------------------*/
+
+
+
+/*Nav Bar*/
+
+div.top-bar.show-for-medium{
+    background: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    width: 100%;
+    z-index: 100;
 }
 
+div.top-bar.show-for-small-only{
+    background: rgba(255, 255, 255, 1);
+}
+/*---------------------------------------------------------*/
+
+
+/*Slider*/
+
+.swiper-container img{
+    width: 100%;
+    height: auto;
+}
+
+div.img{
+    background-color: rgba(0, 0, 0, 0);
+    background-repeat: no-repeat;
+    /*background-image: url(http://www.quality.com.br/wp-content/uploads/2016/07/home-slider1.jpg);*/
+    background-size: cover;
+    background-position: center center;
+    width: 100%;
+    height: 100%;
+}
+
+#img-1{
+    background-image: url("../etc/1.jpg");
+}
+
+#img-2{
+    background-image: url("../etc/2.jpg");
+}
+
+#img-3{
+    background-image: url("../etc/3.jpg");
+}
+/*---------------------------------------------------------*/
 
 
 
 
-
+/*Typography and alignment*/
 
 h2{
     text-align: center;
@@ -60,16 +116,23 @@ h2{
     text-align: center;
 }
 
-.background-title{
-    /*visibility: hidden;*/
-    height: 4em;
-    width: 100%;
-    position: absolute;
-
-}
-
 #section-2>div:last-child>p{
     font-style: italic;
+}
+/*---------------------------------------------------------*/
+
+
+
+
+/*Image adjustments*/
+
+.images img{
+    border-radius: 50%;
+    text-align: center;
+}
+
+.images+.images{
+    margin-top: 2em;
 }
 
 
@@ -78,50 +141,39 @@ h2{
     padding: 2em;
 }
 
-.images img{
-    border-radius: 50%;
-    text-align: center;
+footer img{
+    height: 3em;
+    width: auto;
 }
+/*---------------------------------------------------------*/
+
+
+
+
+/*Padding and margin adjustments*/
+
+#section-1{
+    margin-top: -0.5em;
+}
+
 img+p{
     padding: 1em 1em;
 }
 
-.images+.images{
-    margin-top: 2em;
-}
 
 #services>.row{
     margin-bottom: 2em;
 }
 
-.gray{
-    background-color: gray;
-}
-
-#section-1>img{
-    /*width: auto;
-    height: 5em;
-    position: absolute;*/
-    /*bottom: 0;
-    right: 0;*/
-}
-
 footer>div:first-child{
     padding: 1em;
 }
+/*---------------------------------------------------------*/
 
-footer>div:last-child{
-    background-color: #021619;
-    color: white;
-}
-footer img{
-    height: 3em;
-    width: auto;
-}
 
-#lenossa{
-    bottom: 7em;
-}
+
+
+/*Fab buttons*/
 .fab{
     cursor: pointer;
     z-index: 100;
@@ -144,16 +196,102 @@ footer img{
     width: 2em;
 }
 
+#lenossa{
+    bottom: 7em;
+}
+
 .submenu{
     position: fixed;
     bottom: 1.5em;
     right: 1.5em;
 }
 
+
+#nav-icon3 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+  top: 18px;
+}
+
+#nav-icon3 span:nth-child(4) {
+  top: 36px;
+}
+
+#nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon3.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
+  width: 60px;
+  height: 45px;
+  position: relative;
+  margin: 50px auto;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon1 span, #nav-icon3 span, #nav-icon4 span {
+  display: block;
+  position: absolute;
+  height: 9px;
+  width: 100%;
+  background: #d3531a;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+/*---------------------------------------------------------*/
+
+
+
+
 /* Small only */
 @media screen and (max-width: 39.9375em) {
     #section-1>div+div{
         text-align: center;
+    }
+
+    #section-1>div:nth-child(3){
+        margin-bottom: 3em;
     }
 
     section{
@@ -163,16 +301,35 @@ footer img{
     section>.column:first-child{
         margin-bottom: 3em;
     }
+
+    div.top-bar-title>img{
+        width: auto;
+        height: 2em;
+    }
+
+    .swiper-container{
+        height: 400px;
+    }
     
 }
 
 /* Medium only */
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
+    #section-1>div:nth-child(3){
+        margin-bottom: 4em;
+    }
 
+    div.top-bar-title>img{
+        width: auto;
+        height: 2em;
+    }
 }
 
 /* Medium and up */
 @media screen and (min-width: 40em) {
+
+
+
     /*section:first-child{
         padding: 0;
     }*/
@@ -183,7 +340,7 @@ footer img{
 
 
     section{
-        padding: 6em 10em;
+        padding: 6em 8em;
     }
 
     section>.column:first-child{
@@ -196,9 +353,12 @@ footer img{
 
 /* Large and up */
 @media screen and (min-width: 64em) {
-    #section-1>div:nth-child(3){
-        margin-right: 1em;
+
+    div.top-bar-title>img{
+        width: auto;
+        height: 3em;
     }
+
 
 /* Large only */
 @media screen and (min-width: 64em) and (max-width: 74.9375em) {}
