--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,7 +8,7 @@
 
 @include foundation-flex-grid;
 @include foundation-typography;
-// @include foundation-button;
+@include foundation-button;
 @include foundation-forms;
 
 // @include foundation-accordion;
