--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 /*Body and colors settings*/
 
-html, body{
+body{
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
 }
@@ -172,6 +172,18 @@ footer>div:first-child{
 
 
 
+/*Parallax*/
+
+.parallaxParent {
+		height: 100vh;
+		overflow: hidden;
+	}
+	.parallaxParent > * {
+		height: 200%;
+		position: relative;
+		top: -100%;
+	}
+
 
 /*Fab buttons*/
 .fab{
@@ -179,7 +191,6 @@ footer>div:first-child{
     z-index: 100;
     background-color: #021619;
     position: fixed;
-    bottom: 1.5em;
     right: 1.5em;
     padding: 0.9em;
     border-radius: 50%;
@@ -196,88 +207,73 @@ footer>div:first-child{
     width: 2em;
 }
 
-#lenossa{
-    bottom: 7em;
-}
-
-.submenu{
-    position: fixed;
+#menu{
     bottom: 1.5em;
-    right: 1.5em;
 }
 
-
-#nav-icon3 span:nth-child(1) {
-  top: 0px;
+.menu-overlay{
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 99;
+    background-color: rgba(0,0,0,0.5);
+    opacity: 0;
 }
 
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-  top: 18px;
+.fab-menu{
+    height: 100%;
+    width: 400px;
+    z-index: 101;
+    background: white;
+    position: fixed;
+    bottom: 0;
+    right: -400px;
+    /*padding-right: 1em;*/
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
 
-#nav-icon3 span:nth-child(4) {
-  top: 36px;
+.fab-menu>ul{
+    margin-left: 0 !important;
 }
 
-#nav-icon3.open span:nth-child(1) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
+.fab-menu li:first-child{
+    margin-top: 5em;
 }
 
-#nav-icon3.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
+.fab-menu li{
+    height: 48px;
+    width: 100%;
+    display: table;
 }
 
-#nav-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+.divider{
+    margin-top: 8px;
+    width: 100%;
+    height: 1px;
+    background: #e0e0e0;
 }
 
-#nav-icon3.open span:nth-child(4) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
+.fab-menu li:hover{
+    background: rgba(0,0,0,0.05);
+
 }
 
-#nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
-  width: 60px;
-  height: 45px;
-  position: relative;
-  margin: 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
+.fab-menu li>a{
+    padding: 0 32px;
+    font-size: 14px;
+    display: table-cell;
+    vertical-align: middle;
+    color: black;
 }
 
-#nav-icon1 span, #nav-icon3 span, #nav-icon4 span {
-  display: block;
-  position: absolute;
-  height: 9px;
-  width: 100%;
-  background: #d3531a;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+.fab-menu *{
+    font-weight: 500;
+    color: black;
+    /*font-size: 1em;*/
+    text-align: right;
+    list-style: none;
 }
 /*---------------------------------------------------------*/
 
