--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 /*Body and colors settings*/
 
-body{
+html, body{
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
 }
@@ -224,12 +224,12 @@ footer>div:first-child{
 
 .fab-menu{
     height: 100%;
-    width: 400px;
+    width: 300px;
     z-index: 101;
     background: white;
     position: fixed;
     bottom: 0;
-    right: -400px;
+    right: -300px;
     /*padding-right: 1em;*/
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
 }
@@ -355,6 +355,50 @@ footer>div:first-child{
         height: 3em;
     }
 
+    .fab{
+        display: none;
+    }
+
 
 /* Large only */
 @media screen and (min-width: 64em) and (max-width: 74.9375em) {}
+
+
+.bgParallax {
+	/*font-family: 'Elsie', cursive;*/
+	color:#FFF;
+	/*margin: 0 auto;*/
+	width: 100%;
+	max-width: 1920px;
+	position: relative;
+	min-height: 100%;
+	/*text-shadow:0 0 10px rgba(0,0,0,0.7);*/
+ 
+	background-position: 50% 0;
+	background-repeat: repeat;
+	background-attachment: fixed;
+}
+ 
+/* Define backgrounds dos divs */
+#quemsomos {background-image: url("../etc/maps.png");}
+#missao {
+	background-image: url("../etc/maps.png");
+	-webkit-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
+	-moz-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
+	-ms-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
+	-o-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
+	box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
+}
+ 
+/** Formata o article que vai o texto **/
+.bgParallax article {
+  width: 70%;
+  text-align: center;
+  margin:0 auto;
+  padding:20% 0 0;
+}
+ 
+/** formata texto **/
+/*article h1 {font-size:40px;}
+article p {line-height: 30px; font-size:20px; margin-top:15px;}
+article p a {color:#FFF; text-decoration:none; font-size:30px;}}*/
