--- a/css/custom.css
+++ b/css/custom.css
@@ -1,61 +1,65 @@
-/*Body and colors settings*/
+/*Body, sections and colors settings*/
 
 html, body{
     font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
 }
 
-.gray{
-    background-color: gray;
+section:nth-child(even){
+    background-color: #00485E;
 }
 
-.blue{
-    background-color: #00485E;
+section:nth-child(even) h2, section:nth-child(even) div, section:nth-child(even) label{
+    color: white;
+}
+
+section:nth-child(even) .background-title{
+    background-color: #022630;   
+}
+
+section:nth-child(odd){
+    background-color: #FFFFFF;
+}
+
+section:nth-child(odd) .background-title{
+    background-color: #d6d6d6;
+}
+
+.background-title{
+    height: 4em;
+    width: 100%;
+    position: absolute;
+}
+
+.gray{
+    background-color: gray;
 }
 
 .blue-darker{
     background-color: #022630;
 }
 
-.blue h2, .blue div{
-    color: white;
-}
-
-section.blue .background-title{
-    background-color: #022630;
-    
-}
-
-section:not(.blue) .background-title{
-    background-color: #d6d6d6;
-}
-
 footer>div:last-child{
     background-color: #021619;
     color: white;
 }
-
-.background-title{
-    /*visibility: hidden;*/
-    height: 4em;
-    width: 100%;
-    position: absolute;
-
-}
 /*---------------------------------------------------------*/
-
 
 
 /*Nav Bar*/
 
-div.top-bar.show-for-medium{
+div.top-bar.show-for-large{
     background: rgba(255, 255, 255, 0.3);
-    position: absolute;
-    width: 100%;
+    position: fixed;
     z-index: 100;
+    width: 100%;
 }
 
-div.top-bar.show-for-small-only{
+div.top-bar.show-for-large>top-bar-right{
+
+}
+
+div.top-bar.hide-for-large{
     background: rgba(255, 255, 255, 1);
 }
 /*---------------------------------------------------------*/
@@ -116,9 +120,9 @@ h2{
     text-align: center;
 }
 
-#section-2>div:last-child>p{
+/*#section-2>div:last-child>p{
     font-style: italic;
-}
+}*/
 /*---------------------------------------------------------*/
 
 
@@ -152,7 +156,7 @@ footer img{
 
 /*Padding and margin adjustments*/
 
-#section-1{
+div+div+div+section{
     margin-top: -0.5em;
 }
 
@@ -192,6 +196,7 @@ footer>div:first-child{
     background-color: #021619;
     position: fixed;
     right: 1.5em;
+    bottom: 1.5em;
     padding: 0.9em;
     border-radius: 50%;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -205,10 +210,6 @@ footer>div:first-child{
     margin: auto;
     height: auto;
     width: 2em;
-}
-
-#menu{
-    bottom: 1.5em;
 }
 
 .menu-overlay{
@@ -282,11 +283,11 @@ footer>div:first-child{
 
 /* Small only */
 @media screen and (max-width: 39.9375em) {
-    #section-1>div+div{
+    div+div+div+section>div+div{
         text-align: center;
     }
 
-    #section-1>div:nth-child(3){
+    div+div+div+section>div:nth-child(3){
         margin-bottom: 3em;
     }
 
@@ -311,7 +312,7 @@ footer>div:first-child{
 
 /* Medium only */
 @media screen and (min-width: 40em) and (max-width: 63.9375em) {
-    #section-1>div:nth-child(3){
+    div+div+div+section>div:nth-child(3){
         margin-bottom: 4em;
     }
 
@@ -330,7 +331,7 @@ footer>div:first-child{
         padding: 0;
     }*/
 
-    #section-1>div+div{
+    div+div+div+section>div+div{
         text-align: right;
     }
 
@@ -355,50 +356,6 @@ footer>div:first-child{
         height: 3em;
     }
 
-    .fab{
-        display: none;
-    }
-
 
 /* Large only */
 @media screen and (min-width: 64em) and (max-width: 74.9375em) {}
-
-
-.bgParallax {
-	/*font-family: 'Elsie', cursive;*/
-	color:#FFF;
-	/*margin: 0 auto;*/
-	width: 100%;
-	max-width: 1920px;
-	position: relative;
-	min-height: 100%;
-	/*text-shadow:0 0 10px rgba(0,0,0,0.7);*/
- 
-	background-position: 50% 0;
-	background-repeat: repeat;
-	background-attachment: fixed;
-}
- 
-/* Define backgrounds dos divs */
-#quemsomos {background-image: url("../etc/maps.png");}
-#missao {
-	background-image: url("../etc/maps.png");
-	-webkit-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
-	-moz-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
-	-ms-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
-	-o-box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
-	box-shadow:-20px 0 20px 5px rgba(0,0,0,0.7);
-}
- 
-/** Formata o article que vai o texto **/
-.bgParallax article {
-  width: 70%;
-  text-align: center;
-  margin:0 auto;
-  padding:20% 0 0;
-}
- 
-/** formata texto **/
-/*article h1 {font-size:40px;}
-article p {line-height: 30px; font-size:20px; margin-top:15px;}
-article p a {color:#FFF; text-decoration:none; font-size:30px;}}*/
