--- a/css/custom.css
+++ b/css/custom.css
@@ -48,19 +48,60 @@ footer>div:last-child{
 
 /*Nav Bar*/
 
+@keyframes in{
+
+    from{
+        background: rgba(214, 214, 214, 0.8);
+    }
+    to{
+        background: rgba(214, 214, 214, 1);
+    }
+}
+
+
+@keyframes out{
+
+    from{
+        background: rgba(214, 214, 214, 1);
+    }
+    to{
+        background: rgba(214, 214, 214, 0.8);
+    }
+}
+
 div.top-bar.show-for-large{
-    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    background: rgba(214, 214, 214, 0.8);
     position: fixed;
     z-index: 100;
     width: 100%;
+    font-size: 1em;
+    min-height: 4em;
+    animation: out 0.3s forwards;
 }
 
-div.top-bar.show-for-large>top-bar-right{
+div.top-bar.show-for-large:hover{
+    animation: in 0.3s forwards;
+}
 
+div.top-bar.show-for-large a{
+    font-size: 1em;
+    color: #00232d;
+    font-weight: 500;
+}
+
+div.top-bar.show-for-large>.top-bar-right{
+    position: absolute;
+    right: 0;
+    top: calc(50% - 19px);
+    
+}
+div.top-bar.show-for-large>.top-bar-right *{
+    background-color: transparent;
 }
 
 div.top-bar.hide-for-large{
-    background: rgba(255, 255, 255, 1);
+    /*background: rgba(255, 255, 255, 1);*/
 }
 /*---------------------------------------------------------*/
 
@@ -176,17 +217,12 @@ footer>div:first-child{
 
 
 
-/*Parallax*/
+/*Form*/
 
-.parallaxParent {
-		height: 100vh;
-		overflow: hidden;
-	}
-	.parallaxParent > * {
-		height: 200%;
-		position: relative;
-		top: -100%;
-	}
+form{
+    background: #022630;
+    padding: 2em;
+}
 
 
 /*Fab buttons*/
