removed javascript media querie

--- a/css/custom.css
+++ b/css/custom.css
@@ -38,7 +38,7 @@ section:nth-child(odd) .background-title{
 }
 /*---------------------------------------------------------*/
 
-
+svg{width: 15em;}
 /*Top Bar*/
 
 @keyframes in{
